--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "lumiverse-injector",
-    "display_name": "Lumiverse Injector",
+    "name": "lumiverse-helper",
+    "display_name": "Lumiverse Helper",
     "author": "Prolix OCs",
     "version": "1.0.0",
     "description": "Injects Lumia Definitions, Behaviors, and Personalities from custom-made Lumia DLC files into prompt templates.",
