Full react transition

--- a/manifest.json
+++ b/manifest.json
@@ -4,10 +4,11 @@
   "author": "Prolix OCs",
   "version": "1.0.0",
   "description": "Injects Lumia Definitions, Behaviors, and Personalities from custom-made Lumia DLC files into prompt templates.",
-  "js": "index.js",
+  "js": "dist/index.js",
   "css": "style.css",
   "homePage": "https://github.com/prolix-oc/SillyTavern-LumiverseHelper.git",
   "requires": [],
   "loading_order": 100,
-  "generate_interceptor": "lumiverseHelperGenInterceptor"
+  "generate_interceptor": "lumiverseHelperGenInterceptor",
+  "auto_update": true
 }
